# cpp_educ

./: .gitignore  README.md
1_grammer/: fizzbuzz-debug  fizzbuzz.cpp  hello  hello.c  hello.cpp  stream.cpp
2_pointer/: Makefile  addr  address.cpp  new_del.cpp  pointer  pointer.cpp  reference.cpp
3_array_vector/: Makefile  array  array.cpp  create_data.sh  sum_data.cpp  vec  vector.cpp
4_lib/1_one_file/src/: main.cpp
4_lib/2_prototype_declaration/: Makefile
4_lib/2_prototype_declaration/src/: main.cpp
4_lib/3_split_file/: Makefile
4_lib/3_split_file/src/: add_sub.cpp  hello.cpp  main.cpp
4_lib/4_header/: Makefile
4_lib/4_header/src/: add_sub.cpp  hello.cpp  main.cpp
4_lib/5_static_lib/: Makefile
4_lib/5_static_lib/include/: myheader.hpp
4_lib/6_shared_lib/: Makefile
5_class/: CMakeLists.txt  Makefile  main.cpp
5_class/include/: human.hpp  lab.hpp  student.hpp
5_class/src/: human.cpp  lab.cpp  student.cpp
opencv/: CMakeLists.txt  README.md
opencv/src/: detectFace.cpp  displayImage.cpp  realtimeBlurCamera.cpp  realtimeCamera.cpp
